@@ -1890,6 +1890,7 @@ $wgMessageStructure = array(
 		'chick.css',
 		'simple.css',
 		'modern.css',
+		'print.css',
 	),
 	'scripts' => array(
 		'common.js',
